@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage3/Attic/stage3-chroot.sh,v 1.5 2004/06/18 18:06:21 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage3/Attic/stage3-chroot.sh,v 1.6 2004/07/12 14:25:16 zhen Exp $
 
 /usr/sbin/env-update
 source /etc/profile
@@ -42,5 +42,10 @@ export CONFIG_PROTECT="-*"
 # portage needs to be merged manually with USE="build" set to avoid frying our
 # make.conf. emerge system could merge it otherwise.
 USE="build" emerge portage
-	
+
+if [ -n "${clst_DEBUG}" ]
+then
+	emerge ${clst_myemergeopts} -vp system || exit 1
+fi
+
 emerge ${clst_myemergeopts} system || exit 1
